--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
     <div class="sosmed">
    <div class="icons">
      <li><a href=""><span class="fab fa-whatsapp"></a></span></li>
-     <li><a href=""><span class="fab fa-instagram"></a></li>
+     <li><a href="https://www.instagram.com/pushlab_/"><span class="fab fa-instagram"></a></li>
      <li><a href=""><span class="fab fa-behance"></a></li>
      <li><a href=""><span class="fab fa-youtube"></a></li>
      <li><a href=""><span class="fab fa-dribbble"></a></li>
