--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           <img class="card-img-top" src="img/blog2.svg" alt="Card image cap">
           <div class="card-body">
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-smr">Read More</a>
+            <a href="#" class="btn btn-sm">Read More</a>
           </div>
         </div>
       </div>
